<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".NuevoActivity">

    <EditText
        android:id="@+id/txtdni"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_dni"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/txtnombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_nombre"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/txtapellido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_apellido"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/txtemail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_email"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/txtdireccion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_direccion"
        android:minHeight="48dp" />

    <Button
        android:id="@+id/btnGuarda"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/btn_guarda" />
</LinearLayout>